--- a/spec/Statements.tex
+++ b/spec/Statements.tex
@@ -457,7 +457,7 @@ use-statement:
 
 module-name-list:
   module-name
-  module-name , module-name
+  module-name , module-name-list
 
 module-name:
   identifier
