--- a/spec/Types.tex
+++ b/spec/Types.tex
@@ -224,7 +224,7 @@ imaginary-literal:
   integer-literal `i'
 \end{syntax}
 
-A complex number is specified by adding or subtracting an imaginary
+A complex literal is specified by adding or subtracting an imaginary
 literal with a real literal.  Alternatively, a 2-tuple literal of
 expressions of integer or real type can be cast to a complex.  These
 expressions can be literals, but do not need to be.  To create a
