Cleanups to Vim syntax highlighting scheme.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10645 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/etc/vim/README
+++ b/etc/vim/README
@@ -8,6 +8,7 @@ Files:
                       scheme for chapel files.
 
  syntax/chpl.vim   -- Syntax highlighting scheme for chapel
+ syntax/chpl-c.vim
  
 
 Installation Instructions:
