Adding a simple file I/O example that has been sitting in my local release/examples directory since the last release.  Switched the whole-array read that I tried to use that time around for the element-by-element read that David suggested. Updated the standard files.
Also made some small adjustments to labels
categorization for the linkedList example (changed
writeThis label from frmat to wrths since formatting
implies to me that we have some way to do %10.3f style
formatting...).  Also added a these column since
that is the first test to demonstrate the these
iterator.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10719 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -13,6 +13,7 @@ demonstrate various Chapel features:
 
      beer.chpl              : computes lyrics to "99 bottles of beer"
      blockLU.chpl           : block LU factorization
+     fileIO.chpl            : simple file I/O example using arrays
      genericStack.chpl      : generic stack classes (list- and array-based)
      iterators.chpl         : sample iterators
      jacobi.chpl            : Jacobi iteration
