--- a/spec/Language_Overview.tex
+++ b/spec/Language_Overview.tex
@@ -384,7 +384,7 @@ var A: [D] real;          // A is 2-D, n x n array
 In Chapel, the indices and values for a data set are maintained
 in two distinct types of data structures.  \emph{Domains} specify indices
 and \emph{arrays} store the values for sets of data.  Arrays and domains may
-be arithmetic, sparse, indefinite, enumerated or opaque.
+be arithmetic, sparse, associative, enumerated or opaque.
 
 \begin{example}
 The code below gives simple examples of how domains and arrays are declared
