--- a/spec/Language_Overview_OLD.tex
+++ b/spec/Language_Overview_OLD.tex
@@ -804,7 +804,7 @@ where they may be modified and remain modified upon return.  However, assignment
 of arrays is by value.
 
 Arithmetic domains are just one kind of domain.  Domains may
-also be sparse, indefinite, enumerated or opaque.  Subdomains may be
+also be sparse, associative, enumerated or opaque.  Subdomains may be
 defined to specify a subset of the domain's indices, as in the case of
 inner, non-boundary points of a grid.  See~\rsec{Domains_and_Arrays} for
 a complete description of domains and arrays.
