Changed a reference to the structural iterator interface to reference the these iterator.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10738 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Statements.tex
+++ b/spec/Statements.tex
@@ -346,9 +346,9 @@ unconditionally the first time.
 \index{for@\chpl{for}}
 \index{for loops}
 
-The for loop iterates over ranges, domains, arrays, iterators, or
-any class that implements the structural iterator interface.  The
-syntax of the for loop is given by:
+The for loop iterates over ranges, domains, arrays, iterators, or any
+class that implements an iterator named \chpl{these}.  The syntax of
+the for loop is given by:
 \begin{syntax}
 for-statement:
   `for' loop-control-part loop-body-part
